--- a/about.html
+++ b/about.html
@@ -4,22 +4,7 @@ title: "About"
 description: "Hey, this is HB."
 header-img: "img/bg1.jpg"
 ---
-<!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select> -->
 
-<!-- Chinese Version -->
-<div class="zh post-container">
-
-<audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/WYWZJSS2.mp3" />
-</audio>
-
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
 <p>
 </head>
 
@@ -40,19 +25,5 @@ header-img: "img/bg1.jpg"
     <p align="center">&nbsp;</p></td>
   </tr>
 </table>
-
-
-
-
-<!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
-    <h5>Talks</h5>
-    <ul>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://
+</body>
+</html>
