--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@ description: "Hey, this is HB."
 header-img: "img/bg1.jpg"
 ---
 
+<!-- Language Selector -->
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1"> 英文 English </option>
+</select> -->
+
+<!-- Chinese Version -->
+<div class="zh post-container">
 <p>
 </head>
 
