--- a/index.html
+++ b/index.html
@@ -16,21 +16,9 @@ description: "如果很怕黑，就比黑更黑"
 </head>
 
 <body>
-<table width="300" border="0">
+<table width="400" border="0">
   <tr>
-    <td width="100" height="100"><a href="https://hbpoon.github.io/posts/181215/01"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/posts/181215/FM700p.jpg" /></a></td>
-    <td width="100" height="100">&nbsp;</td>
-    <td width="100" height="100">&nbsp;</td>
-  </tr>
-  <tr>
-    <td width="100" height="100">&nbsp;</td>
-    <td width="100" height="100">&nbsp;</td>
-    <td width="100" height="100">&nbsp;</td>
-  </tr>
-  <tr>
-    <td width="100" height="100">&nbsp;</td>
-    <td width="100" height="100">&nbsp;</td>
-    <td width="100" height="100">&nbsp;</td>
+    <td><div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/p1.jpg" width="400" height="400" /></div></td>
   </tr>
 </table>
 </body>
