--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: "如果很怕黑，就比黑更黑"
 <body>
 <table width="400" border="0">
   <tr>
-    <td><div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/p1.jpg" width="400" height="400" /></div></td>
+    <td><div align="center"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/wpqc.jpg">_</a></div></td>
   </tr>
 </table>
 </body>
@@ -30,9 +30,3 @@ description: "如果很怕黑，就比黑更黑"
 
 
 
-
-<!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer 
