--- a/cantonese.html
+++ b/cantonese.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is HB."
+
+description: ""
 header-img: "img/bg1.jpg"
 ---
 <!-- Language Selector -->
@@ -13,21 +13,250 @@ header-img: "img/bg1.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
-<audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/CGBC.mp3" />
-</audio>
-
-    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    <h5>基本信息</h5>
-    <p><strong>所在地:</strong>廣東 廣州</a> <p>
-    <p><strong>性別:</strong>男</a> <p>
-    <p><strong>生日:</strong>08-16 獅子座</a> <p>
-    <h5>聯繫方式</h5>
-    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
-    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
-    <p></p>
-</div>
+    
+  <p>
+</head>  
+    
+<body>
+<table width="400" border="0">
+  <tr>
+    <td colspan="8"><div align="center"><strong>聲母</strong></div></td>
+  </tr>
+  <tr>
+    <td>B</td>
+    <td>P</td>
+    <td>M</td>
+    <td>F</td>
+    <td>D</td>
+    <td>T</td>
+    <td>N</td>
+    <td>L</td>
+  </tr>
+  <tr>
+    <td>G</td>
+    <td>K</td>
+    <td>NG</td>
+    <td>H</td>
+    <td>GW</td>
+    <td>KW</td>
+    <td>W</td>
+    <td>Z</td>
+  </tr>
+  <tr>
+    <td>C</td>
+    <td>S</td>
+    <td>J</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td colspan="8"><div align="center"><strong>韻母</strong></div></td>
+  </tr>
+  <tr>
+    <td width="50">aa </td>
+    <td width="50"> 啊</td>
+    <td width="50">&nbsp;</td>
+    <td width="50">&nbsp;</td>
+    <td width="50">&nbsp;</td>
+    <td width="50">&nbsp;</td>
+    <td width="50">&nbsp;</td>
+    <td width="50">&nbsp;</td>
+  </tr>
+  <tr>
+    <td>aai</td>
+    <td>挨</td>
+    <td> ai</td>
+    <td>魏</td>
+    <td>aam</td>
+    <td>岩</td>
+    <td>am</td>
+    <td>揞</td>
+  </tr>
+  <tr>
+    <td>aan</td>
+    <td>安(普)</td>
+    <td>an</td>
+    <td>銀</td>
+    <td>aang</td>
+    <td>罌</td>
+    <td>ang</td>
+    <td>鶯</td>
+  </tr>
+  <tr>
+    <td>aap</td>
+    <td>鴨</td>
+    <td>ap</td>
+    <td>噏</td>
+    <td>aat</td>
+    <td>壓</td>
+    <td>at</td>
+    <td>扤</td>
+  </tr>
+  <tr>
+    <td>aak</td>
+    <td>呃</td>
+    <td>ak</td>
+    <td>厄</td>
+    <td>e</td>
+    <td>誒</td>
+    <td>ei </td>
+    <td>A(英)</td>
+  </tr>
+  <tr>
+    <td>eu </td>
+    <td>(d)調</td>
+    <td>em</td>
+    <td>(L)舐</td>
+    <td>eng</td>
+    <td>and(英)</td>
+    <td>ep</td>
+    <td>aap(英)</td>
+  </tr>
+  <tr>
+    <td>ek</td>
+    <td>@</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>i</td>
+    <td>意</td>
+    <td>iu</td>
+    <td>要</td>
+    <td>im</td>
+    <td>厭</td>
+    <td>in</td>
+    <td>燕</td>
+  </tr>
+  <tr>
+    <td>ing</td>
+    <td>(M)明</td>
+    <td>ip</td>
+    <td>頁</td>
+    <td>it</td>
+    <td>熱</td>
+    <td>ik</td>
+    <td>X(英)</td>
+  </tr>
+  <tr>
+    <td>o</td>
+    <td>鵝</td>
+    <td>oi</td>
+    <td>愛</td>
+    <td>ou</td>
+    <td>奧</td>
+    <td>on</td>
+    <td>案</td>
+  </tr>
+  <tr>
+    <td>ong</td>
+    <td>昂</td>
+    <td>ot</td>
+    <td>(G)割</td>
+    <td>ok</td>
+    <td>惡</td>
+    <td>oe</td>
+    <td>(H)靴</td>
+  </tr>
+  <tr>
+    <td>oeng</td>
+    <td>(Z)張</td>
+    <td>oek</td>
+    <td>(S)削</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>eoi</td>
+    <td>(S)水</td>
+    <td>eon</td>
+    <td>(Z)盡</td>
+    <td>eot</td>
+    <td>(Z)卒</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>u</td>
+    <td>互</td>
+    <td>ui</td>
+    <td>匯</td>
+    <td>un</td>
+    <td>換</td>
+    <td>ung</td>
+    <td>瓮</td>
+  </tr>
+  <tr>
+    <td>ut</td>
+    <td>活</td>
+    <td>uk</td>
+    <td>屋</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>yu</td>
+    <td>雨</td>
+    <td>yun</td>
+    <td>圓</td>
+    <td>yut</td>
+    <td>月</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>m</td>
+    <td>(H)噷</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>ng</td>
+    <td>吳</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td colspan="8"><div align="center"><strong>以jyut爲聲調例子</strong></div></td>
+  </tr>
+  <tr>
+    <td>1分</td>
+    <td>2粉</td>
+    <td>3訓</td>
+    <td>4汾</td>
+    <td>5奮</td>
+    <td>6份</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td colspan="8"><div align="center"><strong><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a></strong></div></td>
+  </tr>
+  <tr>
+    <td colspan="8">註：此表韻母用懶音譯音，可能有誤。</td>
+  </tr>
+</table>
+</body>
+</html>
 
 
 
