--- a/cantonese.html
+++ b/cantonese.html
@@ -236,7 +236,7 @@ header-img: "img/bg1.jpg"
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="8"><div align="center"><strong>以jyut爲聲調例子</strong></div></td>
+    <td colspan="8"><div align="center"><strong>以fan爲聲調例子</strong></div></td>
   </tr>
   <tr>
     <td>1分</td>
