--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: "如果很怕黑，就比黑更黑"
 
 </head>
 
-<<body>
+<body>
 <table width="400" border="0">
   <tr>
     <td><div align="center"><strong>POSTS</strong></div></td>
