--- a/movie.html
+++ b/movie.html
@@ -2,7 +2,7 @@
 layout: page
 title: "MOVIE"
 description: "電影"
-header-img: "img/bg1.jpg"
+header-img: "img/fm/04.jpg"
 ---
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
