--- a/posts.html
+++ b/posts.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "Posts"
+
 description: ""
-header-img: "img/bg4.jpg"
+header-img: "img/fm/01.jpg"
 ---
 
 <!-- Language Selector -->
