--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is HB."
-header-img: "img/bg1.jpg"
+header-img: "img/fm/02.jpg"
 ---
 
 <!-- Language Selector -->
