--- a/cantonese.html
+++ b/cantonese.html
@@ -2,7 +2,7 @@
 layout: page
 
 description: ""
-header-img: "img/bg1.jpg"
+header-img: "img/fm/01.jpg"
 ---
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
