--- a/cantonese.html
+++ b/cantonese.html
@@ -249,7 +249,7 @@ header-img: "img/fm/01.jpg"
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="8"><div align="center"><strong><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a></strong></div></td>
+    <td colspan="8"><div align="center"><strong><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a></strong>  、<a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>、<a href="http://www.yueyv.cn/">粵語發音詞典</a></div></td>
   </tr>
   <tr>
     <td colspan="8">註：此表韻母用懶音譯音，可能有誤。</td>
