--- a/bookmarks.html
+++ b/bookmarks.html
@@ -16,7 +16,6 @@ header-img: "img/fm/03.jpg"
 <p>
 </head>
 
-
 <table width="400" border="0">
   <tr>
     <td colspan="2"><div align="center">Search</div></td>
@@ -28,6 +27,13 @@ header-img: "img/fm/03.jpg"
   <tr>
     <td><div align="center"><a href="https://zh.wikipedia.org/">Wikipedia</a></div></td>
     <td><div align="center"><a href="https://m.baidu.com/?pu=sz%401321_480">Baidu</a></div></td>
+  </tr>
+  <tr>
+    <td colspan="2"><div align="center">Video</div></td>
+  </tr>
+  <tr>
+    <td><div align="center"><a href="youtube.com">Youtube</a></div></td>
+    <td><div align="center"><a href="bilibili.com">Bilibili</a></div></td>
   </tr>
   <tr>
     <td colspan="2"><div align="center">Translation</div></td>
@@ -67,7 +73,7 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts/blob/master/README.md">SSR-Github</a></div></td>
-    <td><div align="center"><a href="https://doub.io/sszhfx/">DouBi</a></div></td>
+    <td><div align="center"><a href="https://www.ssrtool.com/tool/free_ssr">SSRTool</a></div></td>
   </tr>
   <tr>
     <td colspan="2"><div align="center">H</div></td>
@@ -82,10 +88,6 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td colspan="2"><div align="center">Other</div></td>
-  </tr>
-  <tr>
-    <td><div align="center"><a href="http://www.yueyv.cn/">Yueyv</a></div></td>
-    <td><div align="center"><a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">Cantonese</a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="https://www.apkmirror.com/">Apkmirror</a></div></td>
