--- a/movie/02.html
+++ b/movie/02.html
@@ -48,7 +48,7 @@ header-img: "img/fm/04.jpg"
     <td><a href="https://vip.kuyun99.com/ppvod/54F1B5A9C05815C54564E7ECF8340D96.m3u8">三個綁匪七條心</a></td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/81C3B11A486EF65A36B2B7EEBB4C772F.m3u8">流浪貓鮑勃</a></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
