--- a/vip.html
+++ b/vip.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is HB."
-header-img: "img/bg1.jpg"
+
+description: "vip視頻解析"
+header-img: "img/fm/04.jpg"
 ---
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -13,34 +13,39 @@ header-img: "img/bg1.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
-<audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/CGBC.mp3" />
-</audio>
-
-    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    <h5>基本信息</h5>
-    <p><strong>所在地:</strong>廣東 廣州</a> <p>
-    <p><strong>性別:</strong>男</a> <p>
-    <p><strong>生日:</strong>08-16 獅子座</a> <p>
-    <h5>聯繫方式</h5>
-    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
-    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
-    <p></p>
-</div>
-
-
-
-
-<!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
-    <h5>Talks</h5>
-    <ul>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://
+<body>
+<table width="400" border="0">
+  <tr>
+    <td><div align="center"><strong>VIP視頻解析</strong></div></td>
+  </tr>
+  <tr>
+    <td><div align="center">將視頻網址粘貼到下面搜索框</div></td>
+  </tr>
+  <tr>
+    <td><form action="http://jqaaa.com/jx.php?url=" target="_blank">
+      <div align="center">
+  <input name="url" size="46" maxlength="100" />
+  <input type="submit" value="線路1" />
+      </div>
+    </form></td>
+  </tr>
+  <tr>
+    <td><div align="center">將視頻網址粘貼到下面搜索框</div></td>
+  </tr>
+  <tr>
+    <td><form action="http://app.baiyug.cn:2019/vip/index.php?url=" target="_blank">
+      <div align="center">
+  <input name="url" size="46" maxlength="100" />
+  <input type="submit" value="線路2" />
+      </div>
+    </form></td>
+  </tr>
+  <tr>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td><div align="center"><a href="http://vip.iqiyi.com/">愛奇藝</a> <a href="https://film.qq.com/">騰訊視頻</a> <a href="http://vip.youku.com/">優酷</a></div></td>
+  </tr>
+</table>
+</body>
+</html>
