--- a/bookmarks.html
+++ b/bookmarks.html
@@ -32,8 +32,8 @@ header-img: "img/fm/03.jpg"
     <td colspan="2"><div align="center">Video</div></td>
   </tr>
   <tr>
-    <td><div align="center"><a href="youtube.com">Youtube</a></div></td>
-    <td><div align="center"><a href="bilibili.com">Bilibili</a></div></td>
+    <td><div align="center"><a href="https://www.youtube.com/">Youtube</a></div></td>
+    <td><div align="center"><a href="https://hbpoon.github.io/vip/">VIP-VIDEO</a></div></td>
   </tr>
   <tr>
     <td colspan="2"><div align="center">Translation</div></td>
