--- a/vip.html
+++ b/vip.html
@@ -13,6 +13,9 @@ header-img: "img/fm/04.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
+<p>
+
+</head>
 <body>
 <table width="400" border="0">
   <tr>
@@ -24,7 +27,7 @@ header-img: "img/fm/04.jpg"
   <tr>
     <td><form action="http://jqaaa.com/jx.php?url=" target="_blank">
       <div align="center">
-  <input name="url" size="30" maxlength="100" />
+   <input name="url" size="28" maxlength="100" />
   <input type="submit" value="線路1" />
       </div>
     </form></td>
@@ -35,8 +38,8 @@ header-img: "img/fm/04.jpg"
   <tr>
     <td><form action="http://app.baiyug.cn:2019/vip/index.php?url=" target="_blank">
       <div align="center">
-  <input name="url" size="30" maxlength="100" />
-  <input type="submit" value="線路2" />
+   <input name="url" size="28" maxlength="100" />
+  <input name="提交" type="submit" value="線路2" />
       </div>
     </form></td>
   </tr>
