--- a/cantonese.html
+++ b/cantonese.html
@@ -20,239 +20,235 @@ header-img: "img/fm/01.jpg"
 <body>
 <table width="400" border="0">
   <tr>
-    <td colspan="8"><div align="center"><strong>聲母</strong></div></td>
+    <td colspan="4"><div align="center"><strong>聲母</strong></div></td>
   </tr>
   <tr>
-    <td>B</td>
-    <td>P</td>
-    <td>M</td>
-    <td>F</td>
-    <td>D</td>
-    <td>T</td>
-    <td>N</td>
-    <td>L</td>
+    <td><div align="center">B</div></td>
+    <td><div align="center">P</div></td>
+    <td><div align="center">M</div></td>
+    <td><div align="center">F</div></td>
   </tr>
   <tr>
-    <td>G</td>
-    <td>K</td>
-    <td>NG</td>
-    <td>H</td>
-    <td>GW</td>
-    <td>KW</td>
-    <td>W</td>
-    <td>Z</td>
+    <td><div align="center">D</div></td>
+    <td><div align="center">T</div></td>
+    <td><div align="center">N</div></td>
+    <td><div align="center">L</div></td>
   </tr>
   <tr>
-    <td>C</td>
-    <td>S</td>
-    <td>J</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">G</div></td>
+    <td><div align="center">K</div></td>
+    <td><div align="center">NG</div></td>
+    <td><div align="center">H</div></td>
   </tr>
   <tr>
-    <td colspan="8"><div align="center"><strong>韻母</strong></div></td>
+    <td><div align="center">GW</div></td>
+    <td><div align="center">KW</div></td>
+    <td><div align="center">W</div></td>
+    <td><div align="center">Z</div></td>
   </tr>
   <tr>
-    <td width="50">aa </td>
-    <td width="50"> 啊</td>
-    <td width="50">&nbsp;</td>
-    <td width="50">&nbsp;</td>
-    <td width="50">&nbsp;</td>
-    <td width="50">&nbsp;</td>
-    <td width="50">&nbsp;</td>
-    <td width="50">&nbsp;</td>
+    <td><div align="center">C</div></td>
+    <td><div align="center">S</div></td>
+    <td><div align="center">J</div></td>
+    <td><div align="center"></div></td>
   </tr>
   <tr>
-    <td>aai</td>
-    <td>挨</td>
-    <td> ai</td>
-    <td>魏</td>
-    <td>aam</td>
-    <td>岩</td>
-    <td>am</td>
-    <td>揞</td>
+    <td colspan="4"><div align="center"><strong>韻母</strong></div></td>
   </tr>
   <tr>
-    <td>aan</td>
-    <td>安(普)</td>
-    <td>an</td>
-    <td>銀</td>
-    <td>aang</td>
-    <td>罌</td>
-    <td>ang</td>
-    <td>鶯</td>
+    <td><div align="center">aa</div></td>
+    <td><div align="center">啊</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
   </tr>
   <tr>
-    <td>aap</td>
-    <td>鴨</td>
-    <td>ap</td>
-    <td>噏</td>
-    <td>aat</td>
-    <td>壓</td>
-    <td>at</td>
-    <td>扤</td>
+    <td><div align="center">aai</div></td>
+    <td><div align="center">挨</div></td>
+    <td><div align="center">ai</div></td>
+    <td><div align="center">魏</div></td>
   </tr>
   <tr>
-    <td>aak</td>
-    <td>呃</td>
-    <td>ak</td>
-    <td>厄</td>
-    <td>e</td>
-    <td>誒</td>
-    <td>ei </td>
-    <td>A(英)</td>
+    <td><div align="center">aan</div></td>
+    <td><div align="center">安(普)</div></td>
+    <td><div align="center">an</div></td>
+    <td><div align="center">銀</div></td>
   </tr>
   <tr>
-    <td>eu </td>
-    <td>(d)調</td>
-    <td>em</td>
-    <td>(L)舐</td>
-    <td>eng</td>
-    <td>and(英)</td>
-    <td>ep</td>
-    <td>aap(英)</td>
+    <td><div align="center">aap</div></td>
+    <td><div align="center">鴨</div></td>
+    <td><div align="center">ap</div></td>
+    <td><div align="center">噏</div></td>
   </tr>
   <tr>
-    <td>ek</td>
-    <td>@</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">aak</div></td>
+    <td><div align="center">呃</div></td>
+    <td><div align="center">ak</div></td>
+    <td><div align="center">厄</div></td>
   </tr>
   <tr>
-    <td>i</td>
-    <td>意</td>
-    <td>iu</td>
-    <td>要</td>
-    <td>im</td>
-    <td>厭</td>
-    <td>in</td>
-    <td>燕</td>
+    <td><div align="center">aam</div></td>
+    <td><div align="center">岩</div></td>
+    <td><div align="center">am</div></td>
+    <td><div align="center">揞</div></td>
   </tr>
   <tr>
-    <td>ing</td>
-    <td>(M)明</td>
-    <td>ip</td>
-    <td>頁</td>
-    <td>it</td>
-    <td>熱</td>
-    <td>ik</td>
-    <td>X(英)</td>
+    <td><div align="center">aang</div></td>
+    <td><div align="center">罌</div></td>
+    <td><div align="center">ang</div></td>
+    <td><div align="center">鶯</div></td>
   </tr>
   <tr>
-    <td>o</td>
-    <td>鵝</td>
-    <td>oi</td>
-    <td>愛</td>
-    <td>ou</td>
-    <td>奧</td>
-    <td>on</td>
-    <td>案</td>
+    <td><div align="center">aat</div></td>
+    <td><div align="center">壓</div></td>
+    <td><div align="center">at</div></td>
+    <td><div align="center">扤</div></td>
   </tr>
   <tr>
-    <td>ong</td>
-    <td>昂</td>
-    <td>ot</td>
-    <td>(G)割</td>
-    <td>ok</td>
-    <td>惡</td>
-    <td>oe</td>
-    <td>(H)靴</td>
+    <td><div align="center">e</div></td>
+    <td><div align="center">誒</div></td>
+    <td><div align="center">ei</div></td>
+    <td><div align="center">A(英)</div></td>
   </tr>
   <tr>
-    <td>oeng</td>
-    <td>(Z)張</td>
-    <td>oek</td>
-    <td>(S)削</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">eu</div></td>
+    <td><div align="center">(d)調</div></td>
+    <td><div align="center">em</div></td>
+    <td><div align="center">(L)舐</div></td>
   </tr>
   <tr>
-    <td>eoi</td>
-    <td>(S)水</td>
-    <td>eon</td>
-    <td>(Z)盡</td>
-    <td>eot</td>
-    <td>(Z)卒</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">eng</div></td>
+    <td><div align="center">and(英)</div></td>
+    <td><div align="center">ep</div></td>
+    <td><div align="center">aap(英)</div></td>
   </tr>
   <tr>
-    <td>u</td>
-    <td>互</td>
-    <td>ui</td>
-    <td>匯</td>
-    <td>un</td>
-    <td>換</td>
-    <td>ung</td>
-    <td>瓮</td>
+    <td><div align="center">ek</div></td>
+    <td><div align="center">@</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
   </tr>
   <tr>
-    <td>ut</td>
-    <td>活</td>
-    <td>uk</td>
-    <td>屋</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">i</div></td>
+    <td><div align="center">意</div></td>
+    <td><div align="center">iu</div></td>
+    <td><div align="center">要</div></td>
   </tr>
   <tr>
-    <td>yu</td>
-    <td>雨</td>
-    <td>yun</td>
-    <td>圓</td>
-    <td>yut</td>
-    <td>月</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">ing</div></td>
+    <td><div align="center">(M)明</div></td>
+    <td><div align="center">ip</div></td>
+    <td><div align="center">頁</div></td>
   </tr>
   <tr>
-    <td>m</td>
-    <td>(H)噷</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">it</div></td>
+    <td><div align="center">熱</div></td>
+    <td><div align="center">ik</div></td>
+    <td><div align="center">X(英)</div></td>
   </tr>
   <tr>
-    <td>ng</td>
-    <td>吳</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">o</div></td>
+    <td><div align="center">鵝</div></td>
+    <td><div align="center">oi</div></td>
+    <td><div align="center">愛</div></td>
   </tr>
   <tr>
-    <td colspan="8"><div align="center"><strong>以fan爲聲調例子</strong></div></td>
+    <td><div align="center">ong</div></td>
+    <td><div align="center">昂</div></td>
+    <td><div align="center">ot</div></td>
+    <td><div align="center">(G)割</div></td>
   </tr>
   <tr>
-    <td>1分</td>
-    <td>2粉</td>
-    <td>3訓</td>
-    <td>4汾</td>
-    <td>5奮</td>
-    <td>6份</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><div align="center">ou</div></td>
+    <td><div align="center">奧</div></td>
+    <td><div align="center">on</div></td>
+    <td><div align="center">案</div></td>
   </tr>
   <tr>
-    <td colspan="8"><div align="center"><strong><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a></strong>  、<a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>、<a href="http://www.yueyv.cn/">粵語發音詞典</a></div></td>
+    <td><div align="center">ok</div></td>
+    <td><div align="center">惡</div></td>
+    <td><div align="center">oe</div></td>
+    <td><div align="center">(H)靴</div></td>
   </tr>
   <tr>
-    <td colspan="8">註：此表韻母用懶音譯音，可能有誤。</td>
+    <td><div align="center">oeng</div></td>
+    <td><div align="center">(Z)張</div></td>
+    <td><div align="center">oek</div></td>
+    <td><div align="center">(S)削</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">eoi</div></td>
+    <td><div align="center">(S)水</div></td>
+    <td><div align="center">eon</div></td>
+    <td><div align="center">(Z)盡</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">eot</div></td>
+    <td><div align="center">(Z)卒</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td><div align="center">u</div></td>
+    <td><div align="center">互</div></td>
+    <td><div align="center">ui</div></td>
+    <td><div align="center">匯</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">ut</div></td>
+    <td><div align="center">活</div></td>
+    <td><div align="center">uk</div></td>
+    <td><div align="center">屋</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">un</div></td>
+    <td><div align="center">換</div></td>
+    <td><div align="center">ung</div></td>
+    <td><div align="center">瓮</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">yu</div></td>
+    <td><div align="center">雨</div></td>
+    <td><div align="center">yun</div></td>
+    <td><div align="center">圓</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">yut</div></td>
+    <td><div align="center">月</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td><div align="center">m</div></td>
+    <td><div align="center">(H)噷</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td><div align="center">ng</div></td>
+    <td><div align="center">吳</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center"><strong>以fan爲聲調例子</strong></div></td>
+  </tr>
+  <tr>
+    <td><div align="center">1分</div></td>
+    <td><div align="center">2粉</div></td>
+    <td><div align="center">3訓</div></td>
+    <td><div align="center">4汾</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">5奮</div></td>
+    <td><div align="center">6份</div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a>、<a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>、<a href="http://www.yueyv.cn/">粵語發音詞典</a></div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="left">註：此表韻母用懶音譯音，可能有誤。</div></td>
   </tr>
 </table>
 </body>
