--- a/about.html
+++ b/about.html
@@ -14,9 +14,18 @@ header-img: "img/fm/02.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
+<body>
+<audio controls="controls">      
+       <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" type="audio/ogg">
+      </div>
+</audio>
+
+
 </head>
 <p align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" alt="" width="150" height="150" /></p>
-<p align="center">HB POON</p>
 <p align="center">即使輸掉一切，也不要輸掉微笑：）<strong></strong></p>
+</body>
+</html>
+
 </body>
 </html>
