--- a/about.html
+++ b/about.html
@@ -15,10 +15,7 @@ header-img: "img/fm/02.jpg"
 <div class="zh post-container">
 <p>
 <body>
-<audio controls="controls">      
-       <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" type="audio/ogg">
-      </div>
-</audio>
+<embed src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" autostart="true" loop="true" hidden="true"></embed>
 
 
 </head>
