--- a/about.html
+++ b/about.html
@@ -15,7 +15,10 @@ header-img: "img/fm/02.jpg"
 <div class="zh post-container">
 <p>
 <body>
-<embed src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" width="0" height="0"></embed>
+<audio autoplay="autoplay">
+  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" />
+</audio>
+
 
 
 </head>
