--- a/cantonese.html
+++ b/cantonese.html
@@ -2,7 +2,7 @@
 layout: page
 
 description: "粵語拼音"
-header-img: "img/fm/01.jpg"
+header-img: ""
 ---
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
