--- a/cantonese.html
+++ b/cantonese.html
@@ -2,7 +2,8 @@
 layout: page
 
 description: "粵語拼音"
-header-img: ""
+header-img: "img/fm/01.jpg"
+
 ---
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -14,7 +15,7 @@ header-img: ""
 <div class="zh post-container">
 
     
-  <p>
+<p>
 </head>  
     
 <body>
@@ -233,16 +234,22 @@ header-img: ""
     <td colspan="4"><div align="center"><strong>以fan爲聲調例子</strong></div></td>
   </tr>
   <tr>
-    <td><div align="center">1分</div></td>
-    <td><div align="center">2粉</div></td>
-    <td><div align="center">3訓</div></td>
-    <td><div align="center">4汾</div></td>
+    <td colspan="4"><div align="center">1分</div></td>
   </tr>
   <tr>
-    <td><div align="center">5奮</div></td>
-    <td><div align="center">6份</div></td>
-    <td><div align="center"></div></td>
-    <td><div align="center"></div></td>
+    <td colspan="4"><div align="center">2粉</div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center">3訓</div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center">4汾</div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center">5奮</div></td>
+  </tr>
+  <tr>
+    <td colspan="4"><div align="center">6份</div></td>
   </tr>
   <tr>
     <td colspan="4"><div align="center"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/JyutJyuJamZitBiu.jpg">粵語音節表</a>、<a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>、<a href="http://www.yueyv.cn/">粵語發音詞典</a></div></td>
