--- a/about.html
+++ b/about.html
@@ -22,8 +22,40 @@ header-img: "img/fm/02.jpg"
 
 
 </head>
-<p align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" alt="" width="150" height="150" /></p>
-<p align="center">即使輸掉一切，也不要輸掉微笑：）<strong></strong></p>
+/p>
+<body>
+<div align="center">
+  <table width="400" border="0">
+    <tr>
+      <td><pre>r:ririiirii:i:i:i:iii:iii:i:iii:i:i:i:::i:::i:::::::::::::::::::::i:::i:::i:iiiii:irr ,:ii:rriririr:
+r,::::::::::::::::,:::,:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,:,::i   :,, i:::::::,
+risrrrrrrrrirrrrriiii:i:i:i:::i:i::::::::::::::,:,:,:,:::::,:,::::::::::::::::i:iis, ,:,:,:srrririr:
+rrrsrsrrrrrrrrrriririiii:i:::::::::i:iii:i::::::::::::::,:,:,,,,,:,::::::::::i:iiri ,,,:: :srririir:
+i:ririrrrrrrririrrrirrririiii:i:iiiiiii:iii:i:i:i::::::::::::::,:,::::i:i:::iiiiri  ,,::, isrrrrrir:
+i::i:iiiiiiiirirrrrrrrrrrrrririrrrrrrrrrii:i:i:::::::::::::::::i:::::::::i:i:iiir  ,,:,,  rsrrrrrrri
+r:riiiiiiiiirirrrrrrrrrrrrrrrrrrsrsrsssrsrririi::::::,:,,,:,,,:,:,::::::::::i:ir,,r:i:::: ssrrrrrrri
+:,iiiririiirirr, :rsrrrrrsrrrrrrrrrrrrrrrsrsri,:,irrisi:,:i:,,, ,, ,,,,:,::::ir:,::iirrr,,ssrrrrrrrr
+i  ,,:rrrrrrrri,::riiiiii:::iirssrir, i,risssS22hr2ssXs,2S2i2rrrss::sriirrrrssr    ,rr,  ,2ssssrsrsi
+2rrsiirirr:iiirr::rr,:ri:::i:::riris ri:srir9Gshr22s5sr:s9irSss2s9S5s2ssssssss     sr: , :2sssssssrr
+r : :ssrsrirsr::::i:iirrir:::,       ,, ,:iii, r:sss2ss2SG2XXXsshX2ssirsssss2,,,,,:ssr:: r2ssssssssr
+:,,,is:rri:srr,,,ii:iiri::,r:r:      ,  i:,i, ,i,ii:i:i::ssr2ssss2srrsrsssrsi:rsrr:iirrr,sX2siirsssr
+i,:irssssrrrrri:iirrrir:i:i:,:,,: , :i ,2:rs, rir2irs,::ss:ir:sr,rr,r2ishisss:22::::,, :,::::,i:iirr
+r:::rrriisrriiirrsrrrsrrrrr:2MBBBG::i::siis: :rrs2rsi,:sssir:rsi:rsrrsrX2r2s,  , irs:::::i,i:       
+s:i:iirirrrriirrrrsssrrirrr:MBBBBh:ii:rsrsi,,rrr2ssr::rssssrirsiirrrsrs2sr2r:,   ,,:, ,,ss55S:, ,  ,
+ss2222s2ssrrri::::::::ssrsssrsss,,:iirssss:rrsrssrsriiissrrrrsrrrsssss2srs2:,,   ,:i, ,isrsssr, , :r
+2s2Sh55s2G9s5999h22ssrGMBBBBBMMMBMG2rrsssssrsrsssrsrrrsrsrrrsrrrssssrssssss2: , ,::,,,rss2ssr:,iirss
+srrrrsss2S2ss5Xh5X2sshhGMMGMMMMMMBBBBr,irsssssssssrrrssrrrrrrrrrirssssssssrr:,::i:::i:i2s2ssri:i:rrs
+rissssss9X22ssssssh2s2X9MGGGGGMGMG2995si:,::i,:rrirrrrrrsrrrrirrsrrrssrsssriiii:ri:,:s222sss2ssrrssr
+sssssr:sXs:rsrrssssM2S2GGGGGGGGGBS:rrrr5BMssss29hX22ssrrrrii::GBMBhsirrr:i:,,:::,,,,rsrssss22sssssss
+srsrsss2Srss22Srr:sG22MBBBMMMMMBB2ss2Sh29hssssss252sh99h9h9X22G9G9sirir,,,:::,,,:,:::irrsrsi:isrrrsr
+rirsss2SX2ssrrssrrG22XishGGMMMMGhsrssS2SXSss2h5S22sssriiirrsr9h99X2XXhXS2sssri:i::,::rrrrrrsrrrrrsir
+sirrrrrrrsssssss2hGs9h, ,,:,::,  :Gssis2Xrrrrrssssss29G99S2sXShh92rirrrrssS999GGG9h2sssrii:isrrssrsr
+siirrrrrii::iiirrss2hs ,  sr,,   :Ssrrssrrrsssirsssss22sh9r:25s2s2ssssrrri:i:irsss2h5h9999h952sssssr</pre></td>
+    </tr>
+  </table>
+</div>
+</body>
+</html>
 </body>
 </html>
 
