--- a/about.html
+++ b/about.html
@@ -22,42 +22,39 @@ header-img: "img/fm/02.jpg"
 
 
 </head>
-/p>
+
 <body>
 <div align="center">
-  <table width="400" border="0">
-    <tr>
-      <td><pre>r:ririiirii:i:i:i:iii:iii:i:iii:i:i:i:::i:::i:::::::::::::::::::::i:::i:::i:iiiii:irr ,:ii:rriririr:
-r,::::::::::::::::,:::,:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,:,::i   :,, i:::::::,
-risrrrrrrrrirrrrriiii:i:i:i:::i:i::::::::::::::,:,:,:,:::::,:,::::::::::::::::i:iis, ,:,:,:srrririr:
-rrrsrsrrrrrrrrrriririiii:i:::::::::i:iii:i::::::::::::::,:,:,,,,,:,::::::::::i:iiri ,,,:: :srririir:
-i:ririrrrrrrririrrrirrririiii:i:iiiiiii:iii:i:i:i::::::::::::::,:,::::i:i:::iiiiri  ,,::, isrrrrrir:
-i::i:iiiiiiiirirrrrrrrrrrrrririrrrrrrrrrii:i:i:::::::::::::::::i:::::::::i:i:iiir  ,,:,,  rsrrrrrrri
-r:riiiiiiiiirirrrrrrrrrrrrrrrrrrsrsrsssrsrririi::::::,:,,,:,,,:,:,::::::::::i:ir,,r:i:::: ssrrrrrrri
-:,iiiririiirirr, :rsrrrrrsrrrrrrrrrrrrrrrsrsri,:,irrisi:,:i:,,, ,, ,,,,:,::::ir:,::iirrr,,ssrrrrrrrr
-i  ,,:rrrrrrrri,::riiiiii:::iirssrir, i,risssS22hr2ssXs,2S2i2rrrss::sriirrrrssr    ,rr,  ,2ssssrsrsi
-2rrsiirirr:iiirr::rr,:ri:::i:::riris ri:srir9Gshr22s5sr:s9irSss2s9S5s2ssssssss     sr: , :2sssssssrr
-r : :ssrsrirsr::::i:iirrir:::,       ,, ,:iii, r:sss2ss2SG2XXXsshX2ssirsssss2,,,,,:ssr:: r2ssssssssr
-:,,,is:rri:srr,,,ii:iiri::,r:r:      ,  i:,i, ,i,ii:i:i::ssr2ssss2srrsrsssrsi:rsrr:iirrr,sX2siirsssr
-i,:irssssrrrrri:iirrrir:i:i:,:,,: , :i ,2:rs, rir2irs,::ss:ir:sr,rr,r2ishisss:22::::,, :,::::,i:iirr
-r:::rrriisrriiirrsrrrsrrrrr:2MBBBG::i::siis: :rrs2rsi,:sssir:rsi:rsrrsrX2r2s,  , irs:::::i,i:       
-s:i:iirirrrriirrrrsssrrirrr:MBBBBh:ii:rsrsi,,rrr2ssr::rssssrirsiirrrsrs2sr2r:,   ,,:, ,,ss55S:, ,  ,
-ss2222s2ssrrri::::::::ssrsssrsss,,:iirssss:rrsrssrsriiissrrrrsrrrsssss2srs2:,,   ,:i, ,isrsssr, , :r
-2s2Sh55s2G9s5999h22ssrGMBBBBBMMMBMG2rrsssssrsrsssrsrrrsrsrrrsrrrssssrssssss2: , ,::,,,rss2ssr:,iirss
-srrrrsss2S2ss5Xh5X2sshhGMMGMMMMMMBBBBr,irsssssssssrrrssrrrrrrrrrirssssssssrr:,::i:::i:i2s2ssri:i:rrs
-rissssss9X22ssssssh2s2X9MGGGGGMGMG2995si:,::i,:rrirrrrrrsrrrrirrsrrrssrsssriiii:ri:,:s222sss2ssrrssr
-sssssr:sXs:rsrrssssM2S2GGGGGGGGGBS:rrrr5BMssss29hX22ssrrrrii::GBMBhsirrr:i:,,:::,,,,rsrssss22sssssss
-srsrsss2Srss22Srr:sG22MBBBMMMMMBB2ss2Sh29hssssss252sh99h9h9X22G9G9sirir,,,:::,,,:,:::irrsrsi:isrrrsr
-rirsss2SX2ssrrssrrG22XishGGMMMMGhsrssS2SXSss2h5S22sssriiirrsr9h99X2XXhXS2sssri:i::,::rrrrrrsrrrrrsir
-sirrrrrrrsssssss2hGs9h, ,,:,::,  :Gssis2Xrrrrrssssss29G99S2sXShh92rirrrrssS999GGG9h2sssrii:isrrssrsr
-siirrrrrii::iiirrss2hs ,  sr,,   :Ssrrssrrrsssirsssss22sh9r:25s2s2ssssrrri:i:irsss2h5h9999h952sssssr</pre></td>
-    </tr>
-  </table>
+  <pre>XrX7X7XXX7Xr777r7r77X777777r7r777r7rrrrrrrrrr;rrr;rrrrrrrr7rr;r;r;r;rr7rrrrr7r7r7r7XX,:;77;XX7X7X7Xr
+Xi;r;r;r;r;;;;;;;;;;;;;;i;iii;i;iiiiii:i:i:iii:::i:::i:::i:i:i:i:i:i:iii:iiiiii;i;;X, .;i:,Xrr;r;r;i
+S7SXXXXXXXXXXXXXX7X77r7r7r7r7rrr7rr;r;;;;;;;r;;;;;;;;;;;;;;;;;r;r;;;r;;;r;rrrr7r7rX7 ,;r;:iSXXXXXXXr
+XXSSSSXSXXXXXXXX7X77r7r7r7r7rrrrrrr7rrrr;r;r;;;;i;i;;;i;;;;;i;i;;;;;;;;r;;;r;7r7rXS:.iii;i;2XX7XXXX7
+X7SXSXSXXXXXXXXXX7XXX77r7rrrrrrrrrrr7r777r7rrrr;r;r;;;;;;;;i;i;iii;ir;r;r;rr7r7r7X7,i:i;; r2XXXXX7Xr
+77XX7XXX7XXXXXXXXX7XXXXXXX77r7r7r7r77777777777r7rrrrrr;r;r;r;;;;i;;;;rrrrrrr77r77X.,i;i;: r2XXXXXXXr
+7;7r77X7X7X7X7XXXXXXXXXXXXX7X7XXXXXXXXX77r7r7r7rr;r;r;rrr;r;rrrrrrr;rr7rrr7r7r77X:.,;r;i, XSXXXXXXXr
+7;77r777777X7X7XXXXXXXXXXSXXXXXXXSXSSSXSXXX7r7r7rr;r;;;r;;;;;;;r;r;r;r;7rrr7r77X;:;i;i:::,S2XXXSXXX7
+X;X77777X7X7X7X7r7XXSXSXSXSXSXXXSXSXSX2SSSSXX7rr:;7r7r7i:;;i;i;iii;;;;;;;rrrrrXX:;X777XX7:aSSXSXSXS7
+r;r77XXX7XXX7XXi.;XSXSXSXSXXXXXXXXXXXXXXXSSSX7i;;7XXXaXrr7X7i;:.ii::i;;;;r;77XSr:;ir7XX7iiZ2XSXSXSXX
+r. :,rSXSXSXXXr:;;Xr77r77;r;7XXa2X77,,7,7raSS88Z0XZS282;Z0Z78XS2Za;r2X77XXXXSaX.,.,iX7i..iZ22SSSSXS7
+ZSXZX;7rXXr7XXSSrXSX;rXX;rr7r;r2XSXZ.XX;8S7S0Wa8XaZ2ZZX;SBS7822ZaBZZaZX222S2aa..,:.SXr,i.rZaS2S2SSSX
+2.Xira2X2SrXXrr;;iX7;rXX7X;rri,.::ir:S;:7XrXZX7ZX02202XSZ07aZZXSZZZaZSSS2222Z; .. .aXr:;,7Z2222S2S2X
+7.i.raXX2Sr22Sr;;XXrXXSX;XiX;7:      ., ,rr7:. ri7XSSSaZZWB88BaZ8BaaarX2XSS22;7XXSXaS2Xr.XZa2a22SSXX
+r;i:XX7XXr7XSXi:ir7rX7Srr;;XrX7,i:, ,r  2;;7; rX;X7iXir:;X77aXSSXaSXXaXXZ2S27;SX7;;;XXXX;a0Za;r7SSSX
+X;;XS2S2SXXSXS777XXSXXX7Xr77;r,:;,,.;7 ;Z7XZi XXXZ7SSi;7aZ7XXraS;XX;X8728XSZZ780rr;;,, ;:rr7rrX7XS22
+X;7rSXX7XXSXX7X7XXX7XXX7XrX;X0W@B2;i7i;XXraXi;S722X2Xi;XZaXXr72r;XaXXSX887Z2i :iiX2aXXX7;;.;i.      
+Si;77SXXXSXX7XXSXSS222SS2aX7MMMMMM;X7;X27SX,.X7XZaSSr;7aZ2XXrXX7rSXXXXX8aX8Zr,   :ir: ,,XaZ08;. .,,:
+aXS777XXX7XXXXX7XXXXSX7rrr7;2MMBa7rr7rXS2aX;XXS2aSS7;rX2aX2XXXSXXXXS2X2Z2SZ;ii:.,;rri:rrZSZZar; i.,i
+2Z8B0088a2SSXXrr;;;r;raZ2Z8ZS22X;;;7X22aSX;XXSX2SSSX777aSSXXXSXXX2S2SSZaSZ8Xi:. .;77i.:72S22SX::::72
+Z2ZZ8ZZSZWBa0BWB0ZZ2XXW@MMMMMMMMMMWa772Sa22X2X2S2S2XXS2SSSSXSXSXS2SSS2ZSaaZZ7.i,:r;:i;XaZZaa27;XXS2S
+2SXSSSSaa8aS2Z888B88ZB8W@@WWW@W@@MMMMSr2ZZ2222aa22SXX2SSXXXXXSXXXS2a222222XXi:i;r;;;7;rZaZ22XrrXrX22
+XXS7X2Z8080ZZZZZZ22XrZ0B@WWWWWWW@@MM@X,,:i7X2S2S2SSS2S2SSXSSXX7rX7XS2S22Z22X7777Srr;772ZZ2aSZX7rr7XX
+XXaZZaX200XZX77X28B@0ZZWWWWWBWBW@8;SaBW0aXr7ri;SX77XXXXXXSXSX7a0ZZSSXSXSXX;i;r;rr7;i;ZaaaaaaaZa228Z2
+2SaS277a02r7ZSaZ8SXWZZ8WWWWBWBWBM8SXXr;SMM8ZZZWW@B00Za2XX77rrr@MMMWSXXS7777ii;7;i:iiSSXXa22aZ222222S
+2XSSSa2Z8SXZZ8ZX7rZWa8@M@@WWWWW@MZZ88B0888SSXX7XaZaZBMWWWWBBZ8BB0BS7777i:;77ri;r;;rrirXSXSS7rXS2X2SX
+S722aS880aZ2S72aXrBZ8ZS0MMMMMMMMM2rXa80800ZZ0008Z22XX7rr7XS2aBB0B8888ZZaSX7rrii;;:;rX2SX2XSS7rS7XSXX
+X77XXSX2ZZ22S2Sa2aWZ8B:,i7X2SS7; XW0Z2XZ82XSXZ2aaZZ880ZZa2SSX8800ZSSaZZ0BWW@BB8Za2XXrr7Xi77SaZ2Z22SS
+2XSSSXX77X22ZZZZ8WBaBZ:ii;7:;;i:.;8XS728ZXX227S22XXXa0W0WW0ZW0080Z2X7r;;;r7SaaBWWW@WWB0ZZSXXX77XSXS7
+SrXXXXXSXX7rrrr77XSZ0Z.;::2Z:,::,X02XS22XS2S2Z7XaZZ8aZ2X807;28aZZZ2ZZ8aa2SXXrr7X7XaZ2ZZ0BBBWBB8ZZZaS</pre>
 </div>
-</body>
-</html>
-</body>
-</html>
-
 </body>
 </html>
