--- a/about.html
+++ b/about.html
@@ -21,8 +21,13 @@ header-img: "img/fm/02.jpg"
 
 
 
-</head>
-<p align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" alt="" width="150" height="150" /></p>
-<p align="center">即使輸掉一切，也不要輸掉微笑：）<strong></strong></p>
+
+<form id="form1" name="form1" method="post" action="">
+  <div align="center">
+    <p><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" width="150" height="150" />
+    </p>
+    <p>即使輸掉一切，也不要輸掉微笑：）</p>
+  </div>
+</form>
 </body>
 </html>
